--- a/views/messages/messages.ejs
+++ b/views/messages/messages.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Messages</title>
     <script src="assets/js/messages.js" defer></script>
+    <script src="assets/js/messageHelpers.js" defer></script>
     <script src="assets/js/addFriend.js" defer></script>
     <link rel="stylesheet" href="assets/css/messages.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
