--- a/public/assets/css/messages.css
+++ b/public/assets/css/messages.css
@@ -56,6 +56,7 @@ body {
     display: flex;
     height: 80px;
     width: 100%;
+    margin-bottom: 25px;
     gap: 25px;
     background: none;
     border: 0px solid;
