added username to request

--- a/views/messages/messages.ejs
+++ b/views/messages/messages.ejs
@@ -33,7 +33,7 @@
                 <div id="reqfriendmodal" class="container">
                     <div id="reqfriendtext">
                         <div id="reqfriendheader">DM Request</div>
-                        <div id="reqfriendsubheader">Test User 1</div>
+                        <div id="reqfriendsubheader"></div>
                     </div>
                     <div id="reqfriendcontrols">
                         <div class="defbutton control fa fa-check" id="acceptfriend"></div>
